feat: added a landing page to view all the screens

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,14 @@ a {
   font-family: "Cerebri";
 }
 
+.pages {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
 /* Progress bar */
 
 .progress-section {
